@@ -301,28 +301,30 @@ See L<sqitch-authentication> for details.
 The role to use when connecting to the server. Superseded by the target URI
 database C<role> query parameter.
 
-=item C<SNOWSQL_HOST>
-
-The PostgreSQL server host to connect to. Superseded by the target URI host
-name.
-
-=item C<SNOWSQL_PORT>
-
-The PostgreSQL server port to connect to. Superseded by the target URI port.
-
 =item C<SNOWSQL_DATABASE>
 
 The name of the database to connect to. Superseded by the target URI database
 name.
 
-=item C<SNOWSQL_REGION>
-
-The snowflake region. Superseded by the target URI host name.
-
 =item C<SNOWSQL_WAREHOUSE>
 
 The warehouse to use. Superseded by the target URI database C<warehouse> query
 parameter.
+
+=item C<SNOWSQL_HOST>
+
+The Snowflake server host to connect to. Superseded by the target URI host
+name. Deprecated by Snowflake.
+
+=item C<SNOWSQL_PORT>
+
+The Snowflake server port to connect to. Superseded by the target URI port.
+Deprecated by Snowflake.
+
+=item C<SNOWSQL_REGION>
+
+The Snowflake region. Superseded by the target URI host name. Deprecated by
+Snowflake.
 
 =back
 
