@@ -90,26 +90,28 @@ SNOWENV: {
     local $ENV{SNOWSQL_REGION} = 'Australia';
     local $ENV{SNOWSQL_WAREHOUSE} = 'madrigal';
     local $ENV{SNOWSQL_ACCOUNT} = 'egregious';
-    local $ENV{SNOWSQL_HOST} = 'test.snowflake.com';
+    local $ENV{SNOWSQL_HOST} = 'test.us-east-2.aws.snowflakecomputing.com';
     local $ENV{SNOWSQL_PORT} = 4242;
     local $ENV{SNOWSQL_DATABASE} = 'tryme';
 
     my $target = App::Sqitch::Target->new(sqitch => $sqitch, uri => URI->new($uri));
     my $snow = $CLASS->new( sqitch => $sqitch, target => $target );
-    is $snow->uri, 'db:snowflake://test.snowflake.com:4242/tryme',
+    is $snow->uri, 'db:snowflake://test.us-east-2.aws.snowflakecomputing.com:4242/tryme',
         'Should build URI from environment';
     is $snow->username, 'kamala', 'Should read username from environment';
     is $snow->password, 'gimme', 'Should read password from environment';
-    is $snow->account, 'test', 'Should read account from host';
+    is $snow->account, 'test.us-east-2.aws', 'Should read account from host';
     is $snow->warehouse, 'madrigal', 'Should read warehouse from environment';
 
     # Delete host.
     $target = App::Sqitch::Target->new(sqitch => $sqitch, uri => URI->new($uri));
     delete $ENV{SNOWSQL_HOST};
     $snow = $CLASS->new( sqitch => $sqitch, target => $target );
-    is $snow->uri, 'db:snowflake://egregious.Australia.snowflakecomputing.com:4242/tryme',
+    is $snow->uri,
+        'db:snowflake://egregious.Australia.snowflakecomputing.com:4242/tryme',
         'Should build URI host from account and region environment vars';
-    is $snow->account, 'egregious', 'Should read account from environment';
+    is $snow->account, 'egregious.Australia',
+        'Should read account and region from environment';
 
     # SQITCH_PASSWORD has priority.
     local $ENV{SQITCH_PASSWORD} = 'irule';
